fixed JS link and search bar spacing bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 
 #search-bar {
-    width: calc( 100% - 82px );
+    width: calc( 100% - 85px );
 }
 
 .tile {
